syntax = "proto3";

package wallet.vega.wallet.v1;
option go_package = "code.vegaprotocol.io/go-wallet/internal/proto/wallet/v1";

import "proto/commands/v1/commands.proto";
import "proto/commands/v1/validator_commands.proto";
import "proto/commands/v1/oracles.proto";

message SubmitTransactionRequest {
  string pub_key = 1;
  bool propagate = 2;

  oneof command {
    // User commands
    commands.v1.OrderSubmission order_submission = 1001;
    commands.v1.OrderCancellation order_cancellation = 1002;
    commands.v1.OrderAmendment order_amendment = 1003;
    commands.v1.WithdrawSubmission withdraw_submission = 1004;
    commands.v1.ProposalSubmission proposal_submission = 1005;
    commands.v1.VoteSubmission vote_submission = 1006;
    commands.v1.LiquidityProvisionSubmission liquidity_provision_submission = 1007;
    commands.v1.DelegateSubmission delegate_submission = 1008;
    commands.v1.UndelegateAtEpochEndSubmission undelegate_at_epoch_end_submission = 1009;

    // Validator commands
    commands.v1.NodeRegistration node_registration = 2001;
    commands.v1.NodeVote node_vote = 2002;
    commands.v1.NodeSignature node_signature = 2003;
    commands.v1.ChainEvent chain_event = 2004;

    // Oracle commands
    commands.v1.OracleDataSubmission oracle_data_submission = 3001;
  }
}
